--- a/src/main/resources/assets/rocketscience/lang/en_us.json
+++ b/src/main/resources/assets/rocketscience/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-    "item.rocketscience.rocket": "Large Rocket"
+  "entity.rocketscience.rocket": "Rideable Rocket",
+  "item.rocketscience.rocket": "Large Rocket"
 }
